test/e2e/testdata/compression.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: compression-all
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /compression
      backendRefs:
        - name: infra-backend-v1
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /compression-min-content-length
      backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: no-compression
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /no-compression
      backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: compression-all
  namespace: gateway-conformance-infra
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: compression-all
  compressor:
    - type: Brotli
      brotli: {}
      minContentLength: 50
      contentTypes:
        - application/json
    - type: Gzip
      gzip: {}
      minContentLength: 50
      contentTypes:
        - application/json
    - type: Zstd
      zstd: {}
      minContentLength: 50
      contentTypes:
        - application/json
